--- a/doc/agile/product_backlog.org
+++ b/doc/agile/product_backlog.org
@@ -11,6 +11,33 @@ This document contains the [[http://www.mountaingoatsoftware.com/agile/scrum/pro
 
 Stories that we intend to look at in the very near future.
 
+*** Problems in tailor generation                                     :story:
+
+Address these issues:
+
+- problems with quilt.cpp and yarn.dia/yarn.json: the conversion of
+  the model path did not work as expected - we do not know of the "."
+  separator. Fixed it manually and then it all worked (minus
+  CMakeLists, see below). We could possibly fix the builder to
+  automatically use the "." to separate model paths.
+- CMakeLists were deleted on all models for some reason, even though
+  the annotations profile look correct.
+- in quilt we correctly generated the forward declarations for
+  registrar error and workflow error without including boost
+  exception. Not sure why that is, nor why it is that we are including
+  them for forward declarations.
+- Missing include of registrar serialisation in
+  all_ser.hpp. Instability in registrar_ser.cpp, but content is
+  correct otherwise.
+- database.json generated invalid JSON.
+
+#+begin_src
+rm *.json
+A="dia knit quilt.cpp wale yarn.json annotations formatters quilt yarn database options stitch yarn.dia"
+for a in $A; do /home/marco/Development/DomainDrivenConsulting/dogen/build/output/gcc/Release/stage/bin/dogen.tailor -t $a.dia -o $a.json; done
+for a in $A; do /home/marco/Development/DomainDrivenConsulting/dogen/build/output/gcc/Release/stage/bin/dogen.knitter -t ${a}.json --cpp-project-dir /home/marco/Development/DomainDrivenConsulting/dogen/projects --ignore-files-matching-regex .*/CMakeLists.txt --ignore-files-matching-regex .*/test/.* --ignore-files-matching-regex .*/tests/.* --verbose --delete-extra-files; done
+#+end_src
+
 *** Do not include algorithm if swap is disabled                      :story:
 
 At present we always include =algorithm= in types' class header - both
