--- a/doc/agile/sprint_backlog_92.org
+++ b/doc/agile/sprint_backlog_92.org
@@ -13,26 +13,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-12 Sat 16:47]
+#+CAPTION: Clock summary at [2016-11-12 Sat 17:14]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *29:21* |       |       | 100.0 |
+| *Total time*                                                                | *29:48* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 29:21   |       |       | 100.0 |
-| Active                                                                      |         | 29:21 |       | 100.0 |
+| Stories                                                                     | 29:48   |       |       | 100.0 |
+| Active                                                                      |         | 29:48 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:10 |   0.6 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   1.5 |
-| COMPLETED Tidy-up README file                                               |         |       |  1:07 |   3.8 |
-| COMPLETED Sort out PIC/PIE linking problems                                 |         |       |  1:55 |   6.5 |
+| COMPLETED Tidy-up README file                                               |         |       |  1:07 |   3.7 |
+| COMPLETED Sort out PIC/PIE linking problems                                 |         |       |  1:55 |   6.4 |
 | COMPLETED Try to fix BinTray problems                                       |         |       |  1:09 |   3.9 |
-| COMPLETED Supply model references via meta-data rather than command line    |         |       |  3:43 |  12.7 |
+| COMPLETED Supply model references via meta-data rather than command line    |         |       |  3:43 |  12.5 |
 | COMPLETED Remove trailing blank lines in comments                           |         |       |  0:39 |   2.2 |
-| COMPLETED External module path for target should be in diagram              |         |       |  1:28 |   5.0 |
-| COMPLETED Make JSON yarn a fully supported frontend                         |         |       | 10:26 |  35.5 |
-| COMPLETED Add a utility that converts a dia model into JSON                 |         |       |  6:48 |  23.2 |
-| COMPLETED Split yarn.json output from yarn.dia                              |         |       |  0:58 |   3.3 |
-| COMPLETED Possible performance regression at =2ac04ea=                      |         |       |  0:31 |   1.8 |
+| COMPLETED External module path for target should be in diagram              |         |       |  1:28 |   4.9 |
+| COMPLETED Make JSON yarn a fully supported frontend                         |         |       | 10:26 |  35.0 |
+| COMPLETED Add a utility that converts a dia model into JSON                 |         |       |  6:48 |  22.8 |
+| COMPLETED Split yarn.json output from yarn.dia                              |         |       |  0:58 |   3.2 |
+| COMPLETED Possible performance regression at =2ac04ea=                      |         |       |  0:31 |   1.7 |
+| COMPLETED Check that all dogen models convert to JSON                       |         |       |  0:27 |   1.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -450,6 +451,41 @@ We expect no movement:
 - 16:46:18 - 16:46:24: 6s
 
 Confirmed.
+
+*** COMPLETED Check that all dogen models convert to JSON             :story:
+    CLOSED: [2016-11-12 Sat 17:14]
+    CLOCK: [2016-11-12 Sat 16:47]--[2016-11-12 Sat 17:14] =>  0:27
+
+We should convert all of dogen's internal models into JSON and
+generate them to ensure there are no differences.
+
+#+begin_src
+rm *.json
+A="dia knit quilt.cpp wale yarn.json annotations formatters quilt yarn database options stitch yarn.dia"
+for a in $A; do /home/marco/Development/DomainDrivenConsulting/dogen/build/output/gcc/Release/stage/bin/dogen.tailor -t $a.dia -o $a.json; done
+for a in $A; do /home/marco/Development/DomainDrivenConsulting/dogen/build/output/gcc/Release/stage/bin/dogen.knitter -t ${a}.json --cpp-project-dir /home/marco/Development/DomainDrivenConsulting/dogen/projects --ignore-files-matching-regex .*/CMakeLists.txt --ignore-files-matching-regex .*/test/.* --ignore-files-matching-regex .*/tests/.* --verbose --delete-extra-files; done
+#+end_src
+
+Notes:
+
+- problems with quilt.cpp and yarn.dia/yarn.json: the conversion of
+  the model path did not work as expected - we do not know of the "."
+  separator. Fixed it manually and then it all worked (minus
+  CMakeLists, see below). We could possibly fix the builder to
+  automatically use the "." to separate model paths.
+- CMakeLists were deleted on all models for some reason, even though
+  the annotations profile look correct.
+- in quilt we correctly generated the forward declarations for
+  registrar error and workflow error without including boost
+  exception. Not sure why that is, nor why it is that we are including
+  them for forward declarations.
+- Missing include of registrar serialisation in
+  all_ser.hpp. Instability in registrar_ser.cpp, but content is
+  correct otherwise.
+- database.json generated invalid JSON.
+
+In general JSON is good enough as a frontend for now; add stories to
+backlog to fix these issues.
 
 *** Merge properties factory with stitching factory                   :story:
 
