--- a/doc/agile/sprint_backlog_92.org
+++ b/doc/agile/sprint_backlog_92.org
@@ -13,28 +13,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-14 Mon 13:52]
+#+CAPTION: Clock summary at [2016-11-15 Tue 10:00]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *31:03* |       |       | 100.0 |
+| *Total time*                                                                | *32:10* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 31:03   |       |       | 100.0 |
-| Active                                                                      |         | 31:03 |       | 100.0 |
+| Stories                                                                     | 32:10   |       |       | 100.0 |
+| Active                                                                      |         | 32:10 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:10 |   0.5 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:27 |   1.4 |
-| COMPLETED Tidy-up README file                                               |         |       |  1:07 |   3.6 |
-| COMPLETED Sort out PIC/PIE linking problems                                 |         |       |  1:55 |   6.2 |
-| COMPLETED Try to fix BinTray problems                                       |         |       |  1:09 |   3.7 |
-| COMPLETED Supply model references via meta-data rather than command line    |         |       |  3:43 |  12.0 |
-| COMPLETED Remove trailing blank lines in comments                           |         |       |  0:39 |   2.1 |
-| COMPLETED External module path for target should be in diagram              |         |       |  1:28 |   4.7 |
-| COMPLETED Make JSON yarn a fully supported frontend                         |         |       | 10:26 |  33.6 |
-| COMPLETED Add a utility that converts a dia model into JSON                 |         |       |  6:48 |  21.9 |
-| COMPLETED Split yarn.json output from yarn.dia                              |         |       |  0:58 |   3.1 |
-| COMPLETED Possible performance regression at =2ac04ea=                      |         |       |  0:31 |   1.7 |
+| COMPLETED Tidy-up README file                                               |         |       |  1:07 |   3.5 |
+| COMPLETED Sort out PIC/PIE linking problems                                 |         |       |  1:55 |   6.0 |
+| COMPLETED Try to fix BinTray problems                                       |         |       |  1:09 |   3.6 |
+| COMPLETED Supply model references via meta-data rather than command line    |         |       |  3:43 |  11.6 |
+| COMPLETED Remove trailing blank lines in comments                           |         |       |  0:39 |   2.0 |
+| COMPLETED External module path for target should be in diagram              |         |       |  1:28 |   4.6 |
+| COMPLETED Make JSON yarn a fully supported frontend                         |         |       | 10:26 |  32.4 |
+| COMPLETED Add a utility that converts a dia model into JSON                 |         |       |  6:48 |  21.1 |
+| COMPLETED Split yarn.json output from yarn.dia                              |         |       |  0:58 |   3.0 |
+| COMPLETED Possible performance regression at =2ac04ea=                      |         |       |  0:31 |   1.6 |
 | COMPLETED Check that all dogen models convert to JSON                       |         |       |  0:27 |   1.4 |
-| STARTED Create a tool to generate product skeletons                         |         |       |  1:15 |   4.0 |
+| STARTED Create a tool to generate product skeletons                         |         |       |  2:22 |   7.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -489,6 +489,7 @@ In general JSON is good enough as a frontend for now; add stories to
 backlog to fix these issues.
 
 *** STARTED Create a tool to generate product skeletons               :story:
+    CLOCK: [2016-11-14 Mon 14:43]--[2016-11-14 Mon 15:50] =>  1:07
     CLOCK: [2016-11-14 Mon 12:05]--[2016-11-14 Mon 13:20] =>  1:15
 
 Now that dogen is evolving to a MDSD tool, it would be great to be
@@ -553,6 +554,17 @@ integration", etc.
 Notes:
 
 - [[https://github.com/elbeno/skeleton][Skeleton]]: project to generate c++ project skeletons.
+- split all of the configuration of CMake dependencies from main CMake
+  file. Possible name: ConfigureX? ConfigureODB, etc. See how find_X
+  is implemented.
+- detect all projects by looping through directories.
+- fix CMake generation so that most projects are generated by Dogen.
+- add option to Dogen to generate test skeleton.
+- detect all input models and generate targets by looping through
+  them.
+- add CMake file to find knitter etc and include those files in
+  package. We probably should install dogen now and have dogen rely on
+  installed dogen first, with an option to switch to "built" dogen.
 
 *** Merge properties factory with stitching factory                   :story:
 
