--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,16 +12,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-21 Mon 11:24]
+#+CAPTION: Clock summary at [2016-11-21 Mon 11:36]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *1:12* |      |      | 100.0 |
+| *Total time*                                                                | *1:23* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 1:12   |      |      | 100.0 |
-| Active                                                                      |        | 1:12 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:10 |  13.9 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 1:02 |  86.1 |
+| Stories                                                                     | 1:23   |      |      | 100.0 |
+| Active                                                                      |        | 1:23 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:10 |  12.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 1:02 |  74.7 |
+| COMPLETED Update readme                                                     |        |      | 0:11 |  13.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -65,6 +66,12 @@ With this release, we have more or less implemented all the major architectural 
 
 On the other hand, we have also successfully engaged a customer who requires C# support. It is likely that the next few iterations will focus on adding support for other languages.
 #+end_src
+
+*** COMPLETED Update readme                                           :story:
+    CLOSED: [2016-11-21 Mon 11:36]
+    CLOCK: [2016-11-21 Mon 11:25]--[2016-11-21 Mon 11:36] =>  0:11
+
+Add some blurb about binary packages, JSON support and windows support.
 
 *** Create a tool to generate product skeletons                       :story:
 
