--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,18 +12,19 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-30 Wed 12:06]
+#+CAPTION: Clock summary at [2016-11-30 Wed 13:37]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *1:56* |      |      | 100.0 |
+| *Total time*                                                                | *2:28* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 1:56   |      |      | 100.0 |
-| Active                                                                      |        | 1:56 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:10 |   8.6 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 1:02 |  53.4 |
-| COMPLETED Update readme                                                     |        |      | 0:11 |   9.5 |
-| COMPLETED Test data generation for dates generates invalid dates            |        |      | 0:33 |  28.4 |
+| Stories                                                                     | 2:28   |      |      | 100.0 |
+| Active                                                                      |        | 2:28 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:10 |   6.8 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 1:02 |  41.9 |
+| COMPLETED Update readme                                                     |        |      | 0:11 |   7.4 |
+| COMPLETED Test data generation for dates generates invalid dates            |        |      | 0:33 |  22.3 |
+| STARTED Add support for Decimal numbers                                     |        |      | 0:32 |  21.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -86,6 +87,12 @@ is because of this code:
 #+end_src
 
 We are probably generating a zero when we get to 27.
+
+*** STARTED Add support for Decimal numbers                           :story:
+    CLOCK: [2016-11-30 Wed 13:04]--[2016-11-30 Wed 13:36] =>  0:32
+
+- try using ICU DecNumber library.
+- check compiler support (MSVC may have decimals; if so, use that instead)
 
 *** Add a frontend for visual studio models                           :story:
 
