--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -5,27 +5,27 @@
 
 * Mission Statement
 
-- implement dart.
+- add cross-language support.
 
 * Stories
 
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-01 Thu 09:49]
+#+CAPTION: Clock summary at [2016-12-01 Thu 12:16]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *7:07* |      |      | 100.0 |
+| *Total time*                                                                | *8:22* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 7:07   |      |      | 100.0 |
-| Active                                                                      |        | 7:07 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 1:43 |  24.1 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 1:02 |  14.5 |
-| COMPLETED Update readme                                                     |        |      | 0:11 |   2.6 |
-| COMPLETED Test data generation for dates generates invalid dates            |        |      | 0:33 |   7.7 |
-| STARTED Add support for Decimal numbers                                     |        |      | 0:32 |   7.5 |
-| STARTED Add support for C#                                                  |        |      | 3:06 |  43.6 |
+| Stories                                                                     | 8:22   |      |      | 100.0 |
+| Active                                                                      |        | 8:22 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 1:43 |  20.5 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 1:02 |  12.4 |
+| COMPLETED Update readme                                                     |        |      | 0:11 |   2.2 |
+| COMPLETED Test data generation for dates generates invalid dates            |        |      | 0:33 |   6.6 |
+| STARTED Add support for Decimal numbers                                     |        |      | 0:32 |   6.4 |
+| STARTED Add support for C#                                                  |        |      | 4:21 |  52.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -111,6 +111,7 @@ format less verbose for the common use case though.
 - check compiler support (MSVC may have decimals; if so, use that instead)
 
 *** STARTED Add support for C#                                        :story:
+    CLOCK: [2016-12-01 Thu 11:01]--[2016-12-01 Thu 12:16] =>  1:15
     CLOCK: [2016-11-30 Wed 16:21]--[2016-11-30 Wed 17:45] =>  1:24
     CLOCK: [2016-11-30 Wed 16:19]--[2016-11-30 Wed 16:20] =>  0:01
     CLOCK: [2016-11-30 Wed 16:01]--[2016-11-30 Wed 16:19] =>  0:18
