--- a/doc/agile/sprint_backlog_93.org
+++ b/doc/agile/sprint_backlog_93.org
@@ -12,24 +12,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-01 Thu 12:16]
+#+CAPTION: Clock summary at [2016-12-02 Fri 10:14]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *8:22* |      |      | 100.0 |
+| *Total time*                                                                | *9:34* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 8:22   |      |      | 100.0 |
-| Active                                                                      |        | 8:22 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 1:43 |  20.5 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 1:02 |  12.4 |
-| COMPLETED Update readme                                                     |        |      | 0:11 |   2.2 |
-| COMPLETED Test data generation for dates generates invalid dates            |        |      | 0:33 |   6.6 |
-| STARTED Add support for Decimal numbers                                     |        |      | 0:32 |   6.4 |
-| STARTED Add support for C#                                                  |        |      | 4:21 |  52.0 |
+| Stories                                                                     | 9:34   |      |      | 100.0 |
+| Active                                                                      |        | 9:34 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 1:51 |  19.3 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 1:02 |  10.8 |
+| COMPLETED Update readme                                                     |        |      | 0:11 |   1.9 |
+| COMPLETED Test data generation for dates generates invalid dates            |        |      | 0:33 |   5.7 |
+| COMPLETED Handle missing stitch templates scenario                          |        |      | 1:04 |  11.1 |
+| STARTED Add support for Decimal numbers                                     |        |      | 0:32 |   5.6 |
+| STARTED Add support for C#                                                  |        |      | 4:21 |  45.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2016-12-02 Fri 09:01]--[2016-12-02 Fri 09:09] =>  0:08
     CLOCK: [2016-11-30 Wed 16:20]--[2016-11-30 Wed 16:30] =>  0:10
     CLOCK: [2016-11-30 Wed 13:37]--[2016-11-30 Wed 15:00] =>  1:23
     CLOCK: [2016-11-21 Mon 10:11]--[2016-11-21 Mon 10:21] =>  0:10
@@ -103,6 +105,24 @@ have a nested structure with namespaces containing types.
 
 We should still support "implied" modules because it makes the file
 format less verbose for the common use case though.
+
+*** COMPLETED Handle missing stitch templates scenario                :story:
+    CLOSED: [2016-12-02 Fri 10:14]
+    CLOCK: [2016-12-02 Fri 09:10]--[2016-12-02 Fri 10:14] =>  1:04
+
+When bootstrapping a new model such as =quilt.csharp= which make use
+of =artefact formatters=, code generation fails:
+
+: Error: File not found: /home/marco/Development/DomainDrivenConsulting/dogen/projects/quilt.csharp/src/types/formatters/io/enum_formatter.stitch
+
+This is because we haven't yet created the stitch templates. The right
+thing to do is to create an empty template if none is found so that
+bootstrapping can take place.
+
+Actually its a bit dodgy that we are creating files in the middle of
+formatting. Perhaps a better way is to do nothing. The user is still
+responsible for providing the template. We just create a blank file
+for the expanded content.
 
 *** STARTED Add support for Decimal numbers                           :story:
     CLOCK: [2016-11-30 Wed 13:04]--[2016-11-30 Wed 13:36] =>  0:32
